a2/stage/tests/accept/valid4.ul
void main () {
	float[5] a;
	int    b;

	b = 73;
	
	a[0] = 1.2;
	a[1] = 2;

	a[3] = a[4] + a[0] * a[1];
}

int bar ( int[5] f ) {

	return f[3];
}

