a2/stage/tests/reject/expr_assign.ul
void main(){
    int t;
    int[5] y;
    t = 5 * 6;
    y[0] = (t + 3) * 6 + 2;
}
